# ChangeLog for kde-base/krec
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/krec/ChangeLog,v 1.89 2008/05/18 20:43:41 maekke Exp $

  18 May 2008; Markus Meier <maekke@gentoo.org> krec-3.5.9.ebuild:
  amd64/x86 stable, bug #221063

  14 May 2008; Markus Rothe <corsair@gentoo.org> krec-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  13 May 2008; Jeroen Roovers <jer@gentoo.org> krec-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> krec-3.5.9.ebuild:
  Marking krec-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> krec-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> krec-3.5.8.ebuild,
  krec-3.5.9.ebuild:
  Keyword split KDE for HPPA.

*krec-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org> +krec-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -krec-3.5.5.ebuild,
  -krec-3.5.6.ebuild, -krec-3.5.7.ebuild:
  Spring cleaning

  31 Jan 2008; Brent Baude <ranger@gentoo.org> krec-3.5.8.ebuild:
  Marking krec-3.5.8 ppc for bug 207634

  30 Jan 2008; Brent Baude <ranger@gentoo.org> krec-3.5.8.ebuild:
  Marking krec-3.5.8 ppc64 for bug 207634

  30 Jan 2008; Christian Faulhammer <opfer@gentoo.org> krec-3.5.8.ebuild:
  stable x86, bug 207634

  29 Jan 2008; Raúl Porcel <armin76@gentoo.org> krec-3.5.8.ebuild:
  alpha/ia64/sparc stable wrt #207634

  28 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org> krec-3.5.8.ebuild:
  Marked stable on amd64 as per bug 207634.

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org> +krec-3.5.8.ebuild:
  Bump to KDE 3.5.8.

*krec-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org> +krec-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org> krec-3.5.7.ebuild:
  x86 stable wrt #185823
